Add Reporting, Export data, and Import Data

--- a/HealthTracker/AppShell.xaml
+++ b/HealthTracker/AppShell.xaml
@@ -31,6 +31,10 @@
             Title="Todo"
             ContentTemplate="{DataTemplate local:TodoPage}"
             Route="TodoPage" />
+        <ShellContent
+            Title="Results"
+            ContentTemplate="{DataTemplate local:ResultsPage}"
+            Route="ResultsPage" />
     </TabBar>
 
 </Shell>
